crates/kirin-chumsky-format-old/src/parser/snapshots/kirin_chumsky_format__parser__tests__generates_parser_for_enum_variants.snap
---
source: crates/kirin-chumsky-format/src/parser/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub enum MathAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    Add {
        lhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        rhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        result_type: ::kirin_chumsky_2::TypeofSSAValue<'tokens, 'src, Language>,
    },
    Sub {
        lhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        rhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        result_type: ::kirin_chumsky_2::TypeofSSAValue<'tokens, 'src, Language>,
    },
}
impl<'tokens, 'src: 'tokens, Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>>
    ::kirin_chumsky_2::WithRecursiveChumskyParser<'tokens, 'src, Language>
    for MathAST<'tokens, 'src, Language>
{
    type Output = Self;
    fn recursive<I>(
        language: ::kirin_chumsky_2::RecursiveParser<'tokens, 'src, I, Language::Output>,
    ) -> ::kirin_chumsky_2::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin_chumsky_2::TokenInput<'tokens, 'src>,
    {
        {
            use kirin_lexer::Token;
            chumsky::prelude::just(Token::Identifier("add"))
                .ignored()
                .then(::kirin_chumsky_2::parsers::ssa())
                .then(::kirin_chumsky_2::parsers::ssa())
                .then_ignore(chumsky::prelude::just(Token::Arrow).ignored())
                .then(::kirin_chumsky_2::parsers::typeof_ssa())
                .map(
                    |((lhs, rhs), result_type)| MathAST::<'tokens, 'src, Language>::Add {
                        lhs: lhs,
                        rhs: rhs,
                        result_type: result_type,
                    },
                )
        }
        .or({
            use kirin_lexer::Token;
            chumsky::prelude::just(Token::Identifier("sub"))
                .ignored()
                .then(::kirin_chumsky_2::parsers::ssa())
                .then(::kirin_chumsky_2::parsers::ssa())
                .then_ignore(chumsky::prelude::just(Token::Arrow).ignored())
                .then(::kirin_chumsky_2::parsers::typeof_ssa())
                .map(
                    |((lhs, rhs), result_type)| MathAST::<'tokens, 'src, Language>::Sub {
                        lhs: lhs,
                        rhs: rhs,
                        result_type: result_type,
                    },
                )
        })
        .boxed()
    }
}
